# lab_cpp_4sem

./: 1.txt  CMakeLists.txt  README.md  lab1.cpp  lab1.h  lab1c.cpp  lab1c.h  lab2.cpp  lab2.h  main.cpp  output.txt  task.txt  test.cpp  tests.cpp
